--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <script src="./script.js" ></script>
 </head>
 <body>
-  <h1>Criptografia</h1>
+  <h1>Tarefa 1 - Criptografia</h1>
+  <h3>Marcus Vinícius Maçulo, Kaynan Vieira e Raphael Reis</h3>
   <p>Transposição Colunar + Vigenère</p>
 
   <label>Chave:</label><br>
