--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <label>Chave:</label><br>
   <input type="text" id="chave" placeholder="Digite a chave"><br><br>
 
-  <label>Texto Original:</label><br>
+  <label>Texto:</label><br>
   <textarea id="textoOriginal" rows="4" cols="50"></textarea><br><br>
 
   <button onclick="criptografar()">Criptografar</button>
